Fix user authentication nav bar alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,9 @@ body {
 form.button_to {
   display: inline;
 }
+
+.user-auth {
+  padding-top: 15px;
+  padding-bottom: 10px;
+  line-height: 20px;
+}
